chore: Remove unnecessary endpoints
