# docs/swagger.yaml
@@ -309,7 +309,7 @@ paths:
       - auth
   /v1/chatrooms:
     get:
-      description: Get a list of all chat rooms
+      description: Get a list of all chat rooms that the user is in
       produces:
       - application/json
       responses:
@@ -356,36 +356,6 @@ paths:
       tags:
       - chatrooms
   /v1/chatrooms/{id}:
-    delete:
-      description: Delete chat room by ID
-      parameters:
-      - description: Chat room ID
-        in: path
-        name: id
-        required: true
-        type: integer
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/utils.SuccessResponse'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/utils.ErrorResponse'
-        "404":
-          description: Not Found
-          schema:
-            $ref: '#/definitions/utils.ErrorResponse'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/utils.ErrorResponse'
-      summary: Delete chat room by ID
-      tags:
-      - chatrooms
     get:
       description: Get chat room by ID
       parameters:
@@ -414,44 +384,6 @@ paths:
           schema:
             $ref: '#/definitions/utils.ErrorResponse'
       summary: Get chat room by ID
-      tags:
-      - chatrooms
-    put:
-      consumes:
-      - application/json
-      description: Update chat room by ID
-      parameters:
-      - description: Chat room ID
-        in: path
-        name: id
-        required: true
-        type: integer
-      - description: Chat room info
-        in: body
-        name: request
-        required: true
-        schema:
-          $ref: '#/definitions/models.ChatRoomRequest'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/utils.SuccessResponse'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/utils.ErrorResponse'
-        "404":
-          description: Not Found
-          schema:
-            $ref: '#/definitions/utils.ErrorResponse'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/utils.ErrorResponse'
-      summary: Update chat room by ID
       tags:
       - chatrooms
   /v1/chatrooms/{id}/join:
